# rust-v1

./: .clauderc  .clippy.toml  .gitignore  .mcp.json  CHANGELOG.md  LICENSE.md  README.md  biome.json  cargo-sort.toml  meta.toml  package.json  rustfmt.toml  tsconfig.json  turbo.json
.chronis/: .gitignore  config.toml
.chronis/sync/: events.jsonl
.claude/: TDD_CHECKLIST.md
.claude/skills/: react-typescript.md  rust-zero-deadcode.md  turborepo.md
.claude/skills/meta/: SKILL.md  examples.md  reference.md
.github/workflows/: ci.yml  meta-ci.yml
apps/api/: .env.example  .gitignore  Cargo.toml  MIGRATION.md  README.md  bacon.toml  build.rs  cargo-sort.toml  package.json  rustfmt.toml
apps/api/.meta/: bacon-locations
apps/api/proto/: api.proto
apps/api/src/: config.rs  error.rs  lib.rs  main.rs
apps/api/src/application/services/: allframe_client.rs  allframe_service.rs  mod.rs  subscription_service.rs
apps/api/src/domain/: mod.rs
apps/api/src/infrastructure/: state.rs
apps/api/src/presentation/dto/: allframe.rs  metrics.rs  mod.rs  orders.rs  products.rs  shipping.rs  subscribe.rs  users.rs
apps/api/src/presentation/handlers/: allframe.rs  health.rs  mod.rs  root.rs  subscribe.rs
apps/api/tests/: integration_test.rs
apps/app/: next.config.mjs  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
apps/app/src/: env.mjs  middleware.ts
apps/app/src/actions/: safe-action.ts
apps/app/src/actions/api/: index.ts  metrics.ts  orders.ts  products.ts  shipping.ts
apps/app/src/actions/user/: update-post-action.ts
apps/app/src/app/[locale]/: layout.tsx
apps/app/src/app/[locale]/(dashboard)/: page.tsx
apps/app/src/app/[locale]/(dashboard)/dashboard/: page.tsx
apps/app/src/app/[locale]/(public)/login/: page.tsx
apps/app/src/app/api/: actions.ts
apps/app/src/app/api/auth/callback/: route.ts
apps/app/src/components/: footer.tsx  google-signin.tsx  sign-out.tsx  user-avatar.tsx
apps/app/src/components/dashboard/: create-order.tsx  metrics-cards.tsx  order-dialog.tsx  product-search.tsx  shipping-calculator.tsx  user-profile.tsx
apps/app/src/components/posts/: posts.server.tsx
apps/app/src/domain/api/: types.ts
apps/app/src/hooks/api/: index.ts  use-metrics.ts  use-orders.ts  use-products.ts  use-shipping.ts
apps/app/src/infrastructure/api/: client.ts
apps/web/: .env.example  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/actions/: subscribe-action.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: copy-text.tsx  footer.tsx  header.tsx  subscribe-form.tsx
docs/: INDEX.md  MCP.md  README.md
docs/archive/: FINAL_DELIVERY.md  REBRANDING_AND_META_SUMMARY.md
docs/current/: ARCHITECTURE.md  MONOREPO_STRUCTURE.md
docs/guides/: EXAMPLES.md  GETTING_STARTED.md  REACT_QUERY_GUIDE.md
docs/launch/: .gitignore  DEMO_SCRIPT.md  LAUNCH_CHECKLIST.md  README.md  SOCIAL_MEDIA_POSTS.md  convert-to-gif.sh  record-demo.sh
docs/meta/: LOG_STREAMING.md  PRUNING_ANALYSIS.md  README.md  STANDALONE.md  SUMMARY_v0.2.0.md
docs/releases/: RELEASE_v0.2.0.md
tooling/allframe-mcp/: Cargo.toml  package.json
tooling/allframe-mcp/src/: main.rs
tooling/e2e/: .gitignore  README.md  package.json  playwright.config.ts
tooling/e2e/tests/: api.spec.ts  app-dashboard.spec.ts  integration.spec.ts  web.spec.ts
tooling/meta/: .clippy.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  PRODUCTION_READINESS.md  README.md  STANDALONE.md  install.sh  package.json  rustfmt.toml
tooling/meta/docs/: USER_GUIDE.md
tooling/meta/src/: cli.rs  config.rs  main.rs
tooling/meta/src/adapters/: mod.rs
tooling/meta/src/execution/: mod.rs
tooling/meta/src/tui/: mod.rs
tooling/meta/tests/: config_tests.rs  integration_tests.rs
tooling/typescript/: package.json
