[package]
name = "api"
version = "1.0.0"
edition = "2021"
authors = ["Wolven Tech"]
description = "V1 API Service - REST API powered by AllFrame"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# AllFrame framework - provides router, http client, json, chrono, hyper, tokio
allframe = { version = "0.1", features = ["router", "health", "http-client", "utils"] }

# HTTP utilities for hyper server
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
bytes = "1.0"

# Serde - needed directly for derive macros (can't use re-export)
serde = { version = "1.0", features = ["derive"] }

# Tracing - needed directly for #[instrument] macro
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
mockall = "0.13"
wiremock = "0.6"
futures = "0.3"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
