[package]
name = "monorepo-meta"
version = "0.2.1"
edition = "2021"
authors = ["Meta Team"]
description = "Meta task orchestrator for monorepos - unified TUI for Turborepo, moon, bacon"
license = "MIT"
repository = "https://github.com/wolven-tech/rust-v1"
homepage = "https://github.com/wolven-tech/rust-v1"
documentation = "https://github.com/wolven-tech/rust-v1/tree/main/tooling/meta"
keywords = ["monorepo", "task-runner", "orchestrator", "turborepo", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "meta"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["process", "rt-multi-thread", "macros"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[lints.rust]
# Zero dead code policy - every line must serve a purpose
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
# All warnings are errors
warnings = "deny"
